# richtext

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  api-reference.md  manual.tjs  readme.md  vcpkg.json  タグ仕様.md  実装.md  計画.md  設計.md
data/: README.md  download_fonts.py
include/: richtext.hpp
include/richtext/: Appearance.hpp  FontFace.hpp  FontManager.hpp  GlyphRenderer.hpp  LinkRegion.hpp  ParagraphLayout.hpp  StyledLayout.hpp  TagParser.hpp  TextLayout.hpp  TextRenderer.hpp  TextStyle.hpp  TextureAtlas.hpp  TimingInfo.hpp
sample/: debug_bidi.cpp  sample_render.cpp  sample_sequential.cpp  sample_texture.cpp  sample_timing.cpp
src/: Appearance.cpp  FontFace.cpp  FontManager.cpp  GlyphRenderer.cpp  ParagraphLayout.cpp  StyledLayout.cpp  TagParser.cpp  TextLayout.cpp  TextRenderer.cpp  TextStyle.cpp  TextureAtlas.cpp  TimingInfo.cpp  main.cpp
